--- a/overlay/frameworks/base/core/res/res/values/bools.xml
+++ b/overlay/frameworks/base/core/res/res/values/bools.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The CyanogenMod Project
+<!-- Copyright (C) 2011 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,8 +15,5 @@
 -->
 
 <resources>
-    <!-- Whether or not the dock settings are to be displayed for this device when docked -->
-    <bool name="has_dock_settings">true</bool>
-    <!-- Whether to connect to wifi automatically -->
-    <bool name="config_auto_connect_wifi_enabled">true</bool>
+    <bool name="preferences_prefer_dual_pane">true</bool>
 </resources>
