--- a/overlay/packages/apps/CMParts/res/values/bools.xml
+++ b/overlay/packages/apps/CMParts/res/values/bools.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The CyanogenMod Project
+<!--
+     Copyright (C) 2015 The CyanogenMod Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +14,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <resources>
-    <!-- Whether or not the dock settings are to be displayed for this device when docked -->
-    <bool name="has_dock_settings">true</bool>
-    <!-- Whether to connect to wifi automatically -->
-    <bool name="config_auto_connect_wifi_enabled">true</bool>
+
+    <!-- Default value for battery_light_enabled preference -->
+    <bool name="def_battery_light_enabled">false</bool>
+    <!-- Default value for battery light pulse -->
+    <bool name="def_battery_light_pulse">false</bool>
+
 </resources>
