--- a/overlay/packages/apps/UnifiedEmail/res/values/constants.xml
+++ b/overlay/packages/apps/UnifiedEmail/res/values/constants.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The CyanogenMod Project
+<!--
+     Copyright (C) 2011 Google Inc.
+     Licensed to The Android Open Source Project.
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +15,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <resources>
-    <!-- Whether or not the dock settings are to be displayed for this device when docked -->
-    <bool name="has_dock_settings">true</bool>
-    <!-- Whether to connect to wifi automatically -->
-    <bool name="config_auto_connect_wifi_enabled">true</bool>
+    
+    <!-- Boolean value indicating whether the tablet UI should be used. -->
+    <bool name="use_tablet_ui">true</bool>
+
 </resources>
