--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -21,4 +21,7 @@
 
     <!-- Volume Rocker Wake -->
     <bool name="config_show_volumeRockerWake">true</bool>
+	
+	<!-- Dashboard number of columns -->
+    <integer name="dashboard_num_columns">2</integer>
 </resources>
