--- a/overlay/packages/apps/Settings/res/values/array.xml
+++ b/overlay/packages/apps/Settings/res/values/array.xml
@@ -21,5 +21,19 @@
 	    <!-- Battery saver mode: allowable trigger threshold levels. -->
     <integer-array name="battery_saver_trigger_values" translatable="false" >
 	 	<item>20</item>
-    </integer-array>
+	</integer-array>
+
+	<string-array name="entries_font_size">
+        <item msgid="6490061470416867723">Small</item>
+        <item msgid="3579015730662088893">Default</item>
+        <item msgid="1678068858001018666">Large</item>
+        <item msgid="490158884605093126">Largest</item>
+    </string-array>
+	
+	    <string-array name="entryvalues_font_size" translatable="false">
+        <item>1.0</item>
+        <item>1.15</item>
+        <item>1.30</item>
+        <item>1.45</item>
+    </string-array>
 </resources>
