--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -29,6 +29,12 @@
     <bool name="quick_settings_show_rotation_lock">true</bool>
 	
 	<!-- The number of columns in the QuickSettings -->
-    <integer name="quick_settings_num_columns">5</integer>
+    <integer name="quick_settings_num_columns">3</integer>
+
+    <!-- The number of rows in the QuickSettings -->
+    <integer name="quick_settings_num_rows">4</integer>
+
+    <!-- The number of columns that the top level tiles span in the QuickSettings -->
+    <integer name="quick_settings_user_time_settings_tile_span">4</integer>
 
 </resources>
