--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -24,4 +24,7 @@
 	
 	<!-- Dashboard number of columns -->
     <integer name="dashboard_num_columns">4</integer>
+	
+	<!-- The number of rows in the QuickSettings -->
+    <integer name="quick_settings_num_rows">2</integer>
 </resources>
