--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/config.xml
@@ -17,18 +17,13 @@
  */
 -->
 <resources>
-    <bool name="def_accelerometer_rotation">true</bool>
-    <bool name="def_wifi_on">true</bool>
-	<bool name="def_screen_brightness_automatic_mode">false</bool>
-	<!-- Default screen brightness Change To 255 is 100%. -->
-	<integer name="def_screen_brightness">255</integer>
-	<!-- def_show_password_on Disable For Securty Reason -->
-	<bool name="def_show_password_on">false</bool>
-	<bool name="config_show_password_on">false</bool>
-	<bool name="def_custom_sys_volume">true</bool>
-	<!-- Default for Settings.Secure.WAKE_GESTURE_ENABLED -->
-	<bool name="def_wake_gesture_enabled">false</bool>
-	<!-- Default state of tap to wake -->
-	<bool name="def_double_tap_to_wake">false</bool>
+    <bool name="def_screen_brightness_automatic_mode">false</bool>
+    
+    <!-- 2 minutes for default screen timeout -->
+    <integer name="def_screen_off_timeout">120000</integer>
+
+    <!-- Value for Settings.Global.LOW_BATTERY_SOUND_TIMEOUT:
+         Mute battery sounds on tablets after one hour with screen off -->
+    <integer name="def_low_battery_sound_timeout">3600000</integer>
 </resources>
 
