--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -26,7 +26,7 @@
     <bool name="config_recents_interface_for_tablets">true</bool>
 
     <!-- Use hardware layers in recents -->
-    <bool name="config_recents_use_hardware_layers">true</bool>
+    <bool name="config_recents_use_hardware_layers">false</bool>
 
     <!-- Whether rotation lock shows up in quick settings or not -->
     <bool name="quick_settings_show_rotation_lock">true</bool>
