--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -23,8 +23,18 @@
     <bool name="config_show_volumeRockerWake">true</bool>
 	
     <!-- Dashboard number of columns -->
-    <integer name="dashboard_num_columns">4</integer>
+    <integer name="dashboard_num_columns">1</integer>
 	
     <!-- The number of rows in the QuickSettings -->
     <integer name="quick_settings_num_rows">2</integer>
+	
+	<!-- When true enable gesture setting. -->
+    <bool name="config_gesture_settings_enabled">false</bool>
+	
+	<!-- Does the device allow updating the recovery. -->
+    <bool name="config_enableRecoveryUpdater">false</bool>
+	
+	<!-- Does the device allow for manual subscription provisioning? Only works for multi-sim devices,
+         and currently depends on QC's proprietary telephony stack -->
+    <bool name="config_enableManualSubProvisioning">false</bool>
 </resources>
